--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,7 @@
-body {background: #d2cbcb;}
-.red {
-	color: red;
+body {
+	background: #d2cbcb;
 }
-.blue {
-	color: blue;
-}
-.cvet {
-	color: #df88df;
-}
-.green {
-	color: green;
-}
-.yellow {
-	color: yellow;
-}
+
 .through {
 	text-decoration: line-through;
 }
@@ -23,4 +11,61 @@ body {background: #d2cbcb;}
 }
 li {
 	font-size: 25px;
+}
+.container {
+	padding: 20px 70px;
+}
+
+h1 {
+	font-size: 35px;
+	color: #145c24;
+}
+
+a {
+	font-style: 18px;
+	text-decoration: none;
+	marker: none;
+	list-style: none;
+	color: #145c24;
+	padding: 7px;
+	display: block;
+	outline: none;
+	/* убирает обводку при фокусе*/
+
+}
+
+a:hover {
+	background: #145c24;
+	color: #fff;
+}
+
+a,
+a:visited {
+	text-decoration: none;
+}
+
+a:hover,
+a:active {
+	text-decoration: none;
+}
+
+ul li {
+	list-style: none;
+	display: block;
+	padding: 0;
+	margin: 0;
+}
+
+nav {
+	background: #fcfcfc;
+	padding: 0;
+}
+
+.nav__list {
+	display: flex;
+	padding: 0;
+}
+
+.nav__list li {
+	margin-right: 5px;
 }
